# ratatouille

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.workspace  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
config/clickhouse/: config.xml
config/jupyter/: overrides.json
config/profiles/: large.yaml  medium.yaml  small.yaml  tiny.yaml
docs/: README.md  USER_GUIDE.md  architecture.md  getting-started.md  operations.md
docs/architecture/: ADD.md  CONCEPT.md  README.md  overview.md
docs/architecture/adr/: 0000-template.md  0001-tech-stack-mvp.md
docs/architecture/journal/: 2026-01-29.md  MVP.md  REWORK.md
docs/deploy/: README.md  backup-recovery.md  configuration.md  docker-compose.md  kubernetes.md  monitoring.md  quick-start.md  scaling.md  security.md  troubleshooting.md
docs/guide/: README.md  dev-mode.md  documentation.md  getting-started.md  git-nessie-sync.md  pipelines-python.md  pipelines-sql.md  triggers.md  troubleshooting.md  workspaces.md
docs/guides/: data-products.md  getting-started.md  testing.md  workspaces.md
docs/reference/: README.md  cli.md  config-yaml.md  environment-variables.md  jinja-functions.md  resource-profiles.md  sdk.md  workspace-yaml.md
pipelines/: __init__.py
scripts/: workspace-init.sh
src/ratatouille/: __init__.py  cli.py  definitions.py  discovery.py  sdk.py
src/ratatouille/catalog/: __init__.py  iceberg.py  nessie.py
src/ratatouille/core/: __init__.py  branches.py  cleaning.py  dev.py  iceberg.py  storage.py  tracking.py
src/ratatouille/docs/: __init__.py  generator.py  models.py  validator.py
src/ratatouille/docs/parsers/: __init__.py  lineage.py  sql_comments.py
src/ratatouille/docs/templates/: __init__.py  business_rules.py  data_dictionary.py  lineage.py  readme.py
src/ratatouille/engine/: __init__.py  duckdb.py
src/ratatouille/lineage/: __init__.py
src/ratatouille/parsers/: __init__.py
src/ratatouille/pipeline/: __init__.py  config.py  decorators.py  executor.py  incremental.py  loader.py  parser.py
src/ratatouille/pipelines/: __init__.py  pos_sales.py
src/ratatouille/products/: __init__.py  consume.py  permissions.py  publish.py  registry.py
src/ratatouille/resources/: __init__.py  config.py  profiles.py
src/ratatouille/schema/: __init__.py
src/ratatouille/templates/: __init__.py
src/ratatouille/testing/: __init__.py  context.py  dagster.py  discovery.py  models.py  runner.py
src/ratatouille/testing/executors/: __init__.py  base.py  quality.py  unit_sql.py
src/ratatouille/tools/: __init__.py  catalog.py  explorer.py  workspace.py
src/ratatouille/triggers/: __init__.py  factory.py  schedules.py  sensors.py  webhooks.py
src/ratatouille/workspace/: __init__.py  config.py  context.py  git_sync.py  manager.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_duckdb_engine.py  test_duckdb_iceberg.py  test_iceberg_nessie.py  test_nessie_catalog.py
tests/unit/: __init__.py  test_pipeline_parser.py  test_products.py  test_workspace.py
workspaces/analytics/: workspace.yaml
workspaces/default/: workspace.yaml
workspaces/default/notebooks/: 01_getting_started.ipynb
workspaces/default/pipelines/: example_pipeline.py
workspaces/demo/: .gitignore  CLAUDE.md  README.md  workspace.yaml
workspaces/demo/.claude/: settings.json
workspaces/demo/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
(+58 files in other folders)
